--- a/package.json
+++ b/package.json
@@ -8,14 +8,9 @@
     "build": "parcel build index.html",
     "test": "jest"
   },
-
-
-
-
-
   "repository": {
     "type": "git",
-"url": "(https://github.com/shobhit0111/Food-App.git)"
+    "url": "(https://github.com/shobhit0111/Food-App.git)"
   },
   "keywords": [
     "react",
@@ -31,6 +26,7 @@
   },
   "dependencies": {
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "react-router-dom": "^6.27.0"
   }
 }
